# Homework21.1

./: README.md  pyproject.toml
blog/templates/blog/: blog_list.html
catalog/: admin.py  forms.py  models.py  views.py
catalog/migrations/: 0001_initial.py  0002_alter_product_category_alter_product_image_and_more.py  0002_version.py  0003_product_is_published.py
catalog/templates/catalog/: product_details.html  product_list.html
config/: settings.py
