[tool.poetry]
name = "Homework21.1"
version = "0.1.0"
description = ""
authors = ["Paul <p.bitiakov.official@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1"
psycopg2 = "^2.9.9"
binary = "^1.0.0"
black = "^24.8.0"
pillow = "^10.4.0"
ipython = "^8.27.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
